// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params and build-id difffing finished 1`] = `
[
  [
    "Processing file: file1.pdf",
  ],
  [
    "Processing file: file2.pdf",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file1.pdf;page:1.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file2.pdf;page:1.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-1 for build custom-build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-1 for build custom-build-id.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file1.pdf;page:2.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file2.pdf;page:2.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-2 for build custom-build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-2 for build custom-build-id.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file2.pdf;page:3.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-3 for build custom-build-id.",
  ],
  [
    "Build custom-build-id finished.",
  ],
  [
    "Build custom-build-id finished (status=APPROVED, unapprovedCount=0, errorCount=0).",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params and build-id difffing unfinished 1`] = `
[
  [
    "Processing file: file1.pdf",
  ],
  [
    "Processing file: file2.pdf",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file1.pdf;page:1.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file2.pdf;page:1.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-1 for build custom-build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-1 for build custom-build-id.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file1.pdf;page:2.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file2.pdf;page:2.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-2 for build custom-build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-2 for build custom-build-id.",
  ],
  [
    "Uploaded image to build custom-build-id: upload id=upload-id:path:file2.pdf;page:3.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-3 for build custom-build-id.",
  ],
  [
    "Build custom-build-id finished.",
  ],
  [
    "Build custom-build-id finished but snapshots haven't been compared yet. Check the build status in a few moments.",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params difffing finished 1`] = `
[
  [
    "Build build-id created: http://build-url/build-id",
  ],
  [
    "Processing file: file1.pdf",
  ],
  [
    "Processing file: file2.pdf",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file1.pdf;page:1.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:1.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-1 for build build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-1 for build build-id.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file1.pdf;page:2.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:2.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-2 for build build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-2 for build build-id.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:3.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-3 for build build-id.",
  ],
  [
    "Build build-id finished.",
  ],
  [
    "Build build-id finished (status=APPROVED, unapprovedCount=0, errorCount=0).",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots with params difffing unfinished 1`] = `
[
  [
    "Build build-id created: http://build-url/build-id",
  ],
  [
    "Processing file: file1.pdf",
  ],
  [
    "Processing file: file2.pdf",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file1.pdf;page:1.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:1.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-1 for build build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-1 for build build-id.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file1.pdf;page:2.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:2.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file1.pdf-2 for build build-id.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-2 for build build-id.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:3.",
  ],
  [
    "Created a snapshot custom-snapshot-name-file2.pdf-3 for build build-id.",
  ],
  [
    "Build build-id finished.",
  ],
  [
    "Build build-id finished but snapshots haven't been compared yet. Check the build status in a few moments.",
  ],
]
`;

exports[`VisualSnapshots generateAndSendPdfFileSnapshots without params 1`] = `
[
  [
    "Build build-id created: http://build-url/build-id",
  ],
  [
    "Processing file: file1.pdf",
  ],
  [
    "Processing file: file2.pdf",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file1.pdf;page:1.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:1.",
  ],
  [
    "Created a snapshot page-1 for build build-id.",
  ],
  [
    "Created a snapshot page-1 for build build-id.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file1.pdf;page:2.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:2.",
  ],
  [
    "Created a snapshot page-2 for build build-id.",
  ],
  [
    "Created a snapshot page-2 for build build-id.",
  ],
  [
    "Uploaded image to build build-id: upload id=upload-id:path:file2.pdf;page:3.",
  ],
  [
    "Created a snapshot page-3 for build build-id.",
  ],
  [
    "Build build-id finished.",
  ],
  [
    "Build build-id finished (status=UNAPPROVED, unapprovedCount=2, errorCount=0).",
  ],
]
`;
